--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,3 +1,9 @@
-<p>
-char-card works!
-</p>
+<section class="characterCard-wrapper">
+  <h2>Rick Sanchez</h2>
+  <h4>Status:</h4>
+  <p>Alive</p>
+  <h4>Last known location:</h4>
+  <p>The Crib</p>
+  <h4>First seen in:</h4>
+  <p>Pilot Episode</p>
+</section>
