--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-home></app-home>
-<app-randmsvg></app-randmsvg>
+<main>
+  <app-home></app-home>
+  <app-randmsvg></app-randmsvg>
+  <app-char-card></app-char-card>
+</main>
