--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,3 +1,4 @@
-<p>
-searchbar works!
-</p>
+<form action="">
+  <input type="search" placeholder="Enter Character Here...." />
+  <button type="submit">Search</button>
+</form>
