--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <main>
   <app-home></app-home>
   <app-randmsvg></app-randmsvg>
-  <app-char-card></app-char-card>
+  <section class="char-card--container">
+    <app-char-card></app-char-card>
+  </section>
+ 
 </main>
