--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -1,5 +1,6 @@
 .characterCard-wrapper{
-  padding: 30px;
+  padding: 10px;
+  width: 70vw;
   background-color: rgb(60, 62, 68);
   border-radius: 15PX;
   color: #fff;
