--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,10 @@ main {
   flex-direction: column;
   align-items: center;
 }
+.char-card--container {
+  width: 100%;
+  background-color: rgb(32 35 41);
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
