--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <main>
   <app-home></app-home>
   <app-randmsvg></app-randmsvg>
-  <section class="char-card--container">
+  <article class="char-card--container">
     <app-char-card></app-char-card>
-  </section>
- 
+  </article>
 </main>
