--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,5 +1,6 @@
 <section class="characterCard-wrapper">
   <h2>Rick Sanchez</h2>
+  <mat-icon >circle</mat-icon>
   <h4>Status:</h4>
   <p>Alive</p>
   <h4>Last known location:</h4>
