--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -1,7 +1,23 @@
-.characterCard-wrapper{
+.characterCard-wrapper {
   padding: 10px;
   width: 70vw;
   background-color: rgb(60, 62, 68);
-  border-radius: 15PX;
+  border-radius: 15px;
   color: #fff;
+}
+
+.charCard-status {
+  display: flex;
+}
+
+.charCard-status-icon {
+  font-size: smaller;
+}
+
+.charCard-status-icon_alive {
+  color: yellowgreen;
+}
+
+.charCard-status-icon_dead {
+  color: red;
 }
