--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,7 +1,10 @@
 <section class="characterCard-wrapper">
   <h2>Rick Sanchez</h2>
-  <mat-icon >circle</mat-icon>
-  <h4>Status:</h4>
+  <section class="charCard-status">
+    <mat-icon class="charCard-status-icon charCard-status-icon_alive" >circle</mat-icon>
+    <h4>Status:</h4>
+  </section>
+
   <p>Alive</p>
   <h4>Last known location:</h4>
   <p>The Crib</p>
