--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,11 +1,12 @@
 <section class="characterCard-wrapper">
   <h2>Rick Sanchez</h2>
-  <section class="charCard-status">
+  <section class="charCard-container">
     <mat-icon class="charCard-status-icon charCard-status-icon_alive" >circle</mat-icon>
     <h4>Status:</h4>
+    <p>Alive</p>
   </section>
 
-  <p>Alive</p>
+  
   <h4>Last known location:</h4>
   <p>The Crib</p>
   <h4>First seen in:</h4>
