--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,13 +1,20 @@
 <section class="characterCard-wrapper">
   <h2>Rick Sanchez</h2>
   <section class="charCard-container">
-    <mat-icon class="charCard-status-icon charCard-status-icon_alive">circle</mat-icon>
+    <mat-icon class="charCard-status-icon charCard-status-icon_alive"
+      >circle</mat-icon
+    >
     <h4>Status:</h4>
     <p>Alive</p>
   </section>
 
-  <h4>Last known location:</h4>
-  <p>The Crib</p>
-  <h4>First seen in:</h4>
-  <p>Pilot Episode</p>
-</section>
+  <section class="charCard-container">
+    <h4>Last known location:</h4>
+    <p>The Crib</p>
+  </section>
+
+  <section class="charCard-container">
+    <h4>First seen in:</h4>
+    <p>Pilot Episode</p>
+  </section>
+
