--- a/src/app/components/searchbar/searchbar.component.css
+++ b/src/app/components/searchbar/searchbar.component.css
@@ -18,7 +18,8 @@ input {
   padding: 10px;
   border: none;
   outline-style: none;
-  font-family: 'Annie Use Your Telescope';font-size: 22px;
+  font-family: 'Annie Use Your Telescope';
+  font-size: 22px;
 
 }
 
