--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -1,6 +1,13 @@
+p {
+  font-family: 'Annie Use Your Telescope';
+  font-size: 1.5em;
+  margin: 10px;
+}
 .characterCard-wrapper {
   padding: 10px;
   width: 70vw;
+  font-family: Luckiest Guy;
+  text-shadow: 1px 2px 10px black;
   background-color: rgb(60, 62, 68);
   border-radius: 15px;
   color: #fff;
