--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -4,16 +4,15 @@
     <mat-icon class="charCard-status-icon charCard-status-icon_alive"
       >circle</mat-icon
     >
-    <h4>Status:</h4>
     <p>Alive</p>
   </section>
 
-  <section class="charCard-container">
+  <section>
     <h4>Last known location:</h4>
     <p>The Crib</p>
   </section>
 
-  <section class="charCard-container">
+  <section>
     <h4>First seen in:</h4>
     <p>Pilot Episode</p>
   </section>
