--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,19 +1,15 @@
-<section class="characterCard-wrapper">
-  <h2>Rick Sanchez</h2>
-  <section class="charCard-container">
-    <mat-icon class="charCard-status-icon charCard-status-icon_alive"
-      >circle</mat-icon
-    >
-    <p>Alive</p>
-  </section>
-
+<section class="characterCard-wrapper charCard-container charCard-textbox">
   <section>
-    <h4>Last known location:</h4>
-    <p>The Crib</p>
-  </section>
+    <h2>Rick Sanchez</h2>
+    <img src="" alt="" />
+    <section>
+      <h4>Last known location:</h4>
+      <p>The Crib</p>
+    </section>
 
-  <section>
-    <h4>First seen in:</h4>
-    <p>Pilot Episode</p>
+    <section>
+      <h4>First seen in:</h4>
+      <p>Pilot Episode</p>
+    </section>
   </section>
-
+</section>
