--- a/src/app/components/homecomponent/homecomponent.component.css
+++ b/src/app/components/homecomponent/homecomponent.component.css
@@ -2,6 +2,7 @@ h1 {
   font-family: 'Luckiest Guy';
   font-size: 76px;
   color: chartreuse;
+  text-align: center;
   text-shadow: 1px 2px 10px black;
 }
 
