--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,7 @@ main {
 }
 .char-card--container {
   width: 100%;
+  margin-top: 20px;
   background-color: rgb(32 35 41);
   display: flex;
   justify-content: center;
