--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -6,6 +6,12 @@ p {
   font-size: 1.5em;
   margin: 10px;
 }
+
+img {
+  border-radius: 10px;
+  box-shadow:1px 2px 10px black ;
+  margin: 20px;
+}
 .characterCard-wrapper {
   padding: 10px;
   width: 70vw;
