--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,4 +1,4 @@
-<form action="">
+<form [formGroup]="this.api.formGroup" action="">
   <input type="search" placeholder="Enter Character Here...." />
   <button type="submit">Search</button>
 </form>
