--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-home></app-home>
   <app-randmsvg></app-randmsvg>
   <article class="char-card--container">
-    <app-char-card [characterInfo]="character"></app-char-card>
+    <app-char-card></app-char-card>
   </article>
 </main>
