--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,14 +1,14 @@
 <section class="characterCard-wrapper charCard-container charCard-textbox">
   <section>
-    <h2>{{characterInfo.name}}</h2>
-    <img [src]="characterInfo.image" alt="" />
+    <h2>gggg</h2>
+    <img src="#" alt="" />
     <section>
       <h4>Last known location:</h4>
-      <p>{{characterInfo.lk_location}}</p>
+      <p></p>
     </section>
 
     <section>
-      <h4>First seen in:</h4>
+     <h4>First seen in:</h4>
       
     </section>
   </section>
