--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,4 +1,16 @@
-<form action="">
-  <input type="search" placeholder="Enter Character Here...." />
+<form>
+  <input
+    type="search"
+    placeholder="Enter Character Here...."
+    name="_searchCharacterName"
+    [(ngModel)]="_searchCharacterName"
+    (input)="
+      this.searchFilteredNames.formatFilteredNames(
+        charactaName,
+        allcharacterNames,
+        _searchCharacterName
+      )
+    "
+  />
   <button type="submit">Search</button>
 </form>
