3 files modified, 1 deleted

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -3,14 +3,8 @@
     type="search"
     placeholder="Enter Character Here...."
     name="_searchCharacterName"
-    [(ngModel)]="_searchCharacterName"
-    (input)="
-      this.searchFilteredNames.formatFilteredNames(
-        this.charactaName,
-        this.allcharacterNames,
-        _searchCharacterName
-      )
-    "
+    [formControl]="_searchCharacterName"
+    [matAutocomplete]="auto"
   />
 
 
