9 files modified, 3 added

--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -8,8 +8,8 @@
     </section>
 
     <section>
-     <h4>First seen in:</h4>
-      
+      <h4>First seen in:</h4>
     </section>
+    <app-randmsvg></app-randmsvg>
   </section>
 </section>
