--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -14,3 +14,9 @@
   />
   <button type="submit">Search</button>
 </form>
+
+<img [src]="character.image" *ngFor="
+let character of allcharacterNames | characterSearchFilter: _searchCharacterName;
+index as i
+"
+>
