--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -14,9 +14,16 @@
   />
   <button type="submit">Search</button>
 </form>
-
-<img [src]="character.image" *ngFor="
-let character of allcharacterNames | characterSearchFilter: _searchCharacterName;
+<app-char-card    *ngFor="
+let character of allcharacterNames
+  | characterSearchFilter: _searchCharacterName;
 index as i
-"
->
+" [c]=_searchCharacterName></app-char-card>
+<img
+  [src]="character.image"
+  *ngFor="
+    let character of allcharacterNames
+      | characterSearchFilter: _searchCharacterName;
+    index as i
+  "
+/>
