--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,7 +1,8 @@
 <section class="characterCard-wrapper charCard-container charCard-textbox">
   <section>
-    <h2>gggg</h2>
-    <img src="#" alt="" />
+    <img [src]="c" alt="">
+    <h2>{{c }}</h2>
+ 
     <section>
       <h4>Last known location:</h4>
       <p></p>
@@ -10,6 +11,5 @@
     <section>
       <h4>First seen in:</h4>
     </section>
-    <app-randmsvg></app-randmsvg>
   </section>
 </section>
