--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,7 +1,6 @@
 <section class="characterCard-wrapper charCard-container charCard-textbox">
   <section>
-    <img [src]="c" alt="">
-    <h2>{{c }}</h2>
+    <h2>{{ characterInfo }}</h2>
  
     <section>
       <h4>Last known location:</h4>
