--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -18,7 +18,7 @@
 let character of allcharacterNames
   | characterSearchFilter: _searchCharacterName;
 index as i
-" [c]=_searchCharacterName></app-char-card>
+" [characterInfo]=_searchCharacterName></app-char-card>
 <img
   [src]="character.image"
   *ngFor="
