--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,6 +1,7 @@
 <section class="characterCard-wrapper charCard-container charCard-textbox">
   <section>
-    <h2>{{ characterInfo }}</h2>
+    <h2>{{ characterInfo.name }}</h2>
+    <img [src]="characterInfo.image" alt="">
  
     <section>
       <h4>Last known location:</h4>
