--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -4,8 +4,8 @@
     <img [src]="characterInfo.image" alt="">
  
     <section>
-      <h4>Last known location:</h4>
-      <p></p>
+      <h4>Status:</h4>
+      <p>{{characterInfo.status}}</p>
     </section>
 
     <section>
