--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -30,7 +30,14 @@ img {
 .charCard-container {
   display: flex;
 }
-
+.char-card--container {
+  width: 100%;
+  margin-top: 20px;
+  background-color: rgb(32 35 41);
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+}
 .charCard-status-icon {
   font-size: x-small;
   border: red solid;
