--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,19 +1,24 @@
-<form>
-  <input
-    type="search"
-    placeholder="Enter Character Here...."
-    name="_searchCharacterName"
-    [(ngModel)]="_searchCharacterName"
-    (input)="
-      this.searchFilteredNames.formatFilteredNames(
-        charactaName,
-        allcharacterNames,
-        _searchCharacterName
-      )
-    "
-  />
-  <button type="submit">Search</button>
-</form>
+<div class="searchbar-wrapper">
+  <form>
+    <input
+      type="search"
+      placeholder="Enter Character Here...."
+      name="_searchCharacterName"
+      [(ngModel)]="_searchCharacterName"
+      (input)="
+        this.searchFilteredNames.formatFilteredNames(
+          charactaName,
+          allcharacterNames,
+          _searchCharacterName
+        )
+      "
+    />
+    <button type="submit">Search</button>
+  </form>
+</div>
+
+  
+
 
 <app-char-card *ngFor="
 let character of allcharacterNames
