--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -8,7 +8,7 @@ p {
 }
 
 img {
-  border-radius: 10px;
+ border-radius: 15%;
   box-shadow:1px 2px 10px black ;
   margin: 20px;
 }
@@ -21,21 +21,12 @@ img {
   border-radius: 15px;
   color: #fff;
 }
-.charCard-textbox {
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
 
-}
-.charCard-container {
-  display: flex;
-}
+
 .char-card--container {
-  width: 100%;
-  margin-top: 20px;
+ 
+  margin: 20px;
   background-color: rgb(32 35 41);
-  display: flex;
-  justify-content: center;
   padding: 30px;
 }
 .charCard-status-icon {
