--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,19 +1,24 @@
 <article class="char-card--container">
   <section class="characterCard-wrapper charCard-container charCard-textbox">
-  
-    <img [src]="characterInfo.image" alt="" />
-    <h2>{{ characterInfo.name }}</h2>
-    <mat-list>
-      <mat-list-item>
-        <mat-icon matListItemIcon>circle</mat-icon>
-        <h1 matListItemTitle>
-          Status:{{ characterInfo.status }}/{{ characterInfo.species }}
-        </h1>
-      </mat-list-item>
-    </mat-list>
+    <div>
+      <img [src]="characterInfo.image" alt="" />
+      <mat-list>
+        <mat-list-item>
+          <mat-icon matListItemIcon>circle</mat-icon>
+          <h1 matListItemTitle>
+            Status:{{ characterInfo.status }}/{{ characterInfo.species }}
+          </h1>
+        </mat-list-item>
+      </mat-list>
+    </div>
+    <div>
+    <h1>{{ characterInfo.name }}</h1>
     <ul>
       <li>{{ characterInfo.location.name }}</li>
       <li>{{ characterInfo.gender }}</li>
     </ul>
+    
+    </div>
+
   </section>
 </article>
