--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,16 @@
 /* Add application styles & imports to this file! */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~@angular/material/theming';
+
+// Define a custom typography config that overrides the font-family as well as the
+// `headlines` and `body-1` levels.
 $custom-typography: mat-typography-config(
-  $font-family:  'Annie Use Your Telescope'
+  $font-family:  'Annie Use Your Telescope',
+  $headline: mat-typography-level(32px, 48px, 700),
+  $body-1: mat-typography-level(16px, 24px, 500)
 );
 
-@include angular-material-typography($custom-typography);
-
-
-
+@include mat-list-typography($custom-typography);
 * {
   margin: 0;
   padding: 0;
