--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,9 @@
+main{
+  background: linear-gradient(to right, #00c9ff, #92fe9d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  box-shadow: 1px 2px 5px black;
+padding: 10px
+  ;
+}
 h1 {
   font-family: 'Luckiest Guy';
   font-size: 76px;
