--- a/src/app/components/searchbar/searchbar.component.css
+++ b/src/app/components/searchbar/searchbar.component.css
@@ -15,6 +15,13 @@ form {
   justify-content: center;
  
 }
+.char-next-btn{
+  font-size:50px;
+  width: fit-content;
+  height: fit-content;
+  cursor: pointer;
+}
+
 input {
 
   flex-grow: 1;
