--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,8 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~@angular/material/theming';
 
-
 * {
   margin: 0;
   padding: 0;
-  
+  box-sizing: border-box;
 }
