--- a/src/app/components/searchbar/searchbar.component.css
+++ b/src/app/components/searchbar/searchbar.component.css
@@ -5,7 +5,8 @@ form {
   width: 600px;
   margin: 10px;
   padding: 2px;
-  font-family: 'Annie Use Your Telescope';font-size: 22px;
+  font-family: 'Annie Use Your Telescope';
+  font-size: 22px;
 
   
 }
