--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -2,6 +2,12 @@ h1 {
   color: #fff;
   font-size: xx-large;
 }
+
+h3 {
+  color: chartreuse;
+  text-align: center;
+  text-shadow: 1px 2px 10px black;
+}
 p {
   font-family: 'Annie Use Your Telescope';
   font-size: 1.5em;
@@ -12,6 +18,10 @@ img {
   box-shadow: 1px 2px 10px black;
   margin: 20px;
 }
+.character-status_{
+  font-size: medium;
+  font-family: 'Annie Use Your Telescope';
+}
 .characterCard-wrapper {
   padding: 10px;
   width: 70vw;
@@ -21,7 +31,15 @@ img {
   border-radius: 15px;
   color: #fff;
 }
-
+.character-table {
+  
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    
+}
 .charCard-container {
   display: flex;
 }
