--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -15,8 +15,9 @@ p {
 }
 
 img {
-  box-shadow: 1px 2px 10px black;
-  margin: 20px;
+  box-shadow: 1px 2px 20px black;
+  border-radius: 25px;
+
 }
 .character-status_{
   font-size: medium;
@@ -34,13 +35,16 @@ img {
 .character-table {
   
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     
 }
-
+.card-container {
+  display: flex;
+  justify-content: center;
+}
 .char-card--container {
   margin: 20px;
   background-color: rgb(32 35 41);
