--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,5 +1,5 @@
-<article class="char-card--container">
-  <section class="characterCard-wrapper">
+<article>
+  <section class="card-wrapper">
     <div>
       <mat-list>
         <mat-list-item>
@@ -10,7 +10,7 @@
       <div class="card-container"><img [src]="characterInfo.image" alt="" />
       </div>
     </div>
-    <div class="character-table card-container">
+    <div class="card-table card-container">
 
       <h3>Last Known Location:</h3>
       <p>{{ characterInfo.location.name }}</p>
