--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -26,7 +26,7 @@ article {
   padding: 30px;
 
 }
-.character-status_{
+.card-status{
   font-size: medium;
   font-family: 'Annie Use Your Telescope';
 }
