--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -4,7 +4,7 @@
       <mat-list>
         <mat-list-item>
           <mat-icon matListItemIcon>circle</mat-icon>
-          <h1 matListItemTitle> <span class="character-status_">{{characterInfo.status}}</span> | {{ characterInfo.name }} </h1>
+          <h1 matListItemTitle> <span class="card-status_">{{characterInfo.status}}</span> | {{ characterInfo.name }} </h1>
         </mat-list-item>
       </mat-list>
       <div class="card-container"><img [src]="characterInfo.image" alt="" />
