--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,4 +1,4 @@
-<div class="searchbar-wrapper">
+<section class="searchbar-wrapper">
   <form>
     <input
       type="search"
@@ -15,7 +15,7 @@
     />
     <button type="submit">Search</button>
   </form>
-</div>
+</section>
 
 <app-char-card
   *ngFor="
