--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -25,5 +25,5 @@
   "
   [characterInfo]="character" 
 ></app-char-card>
-<mat-icon class="char-next-btn" (click)="getPreviousResults()">arrow_left</mat-icon>
-<mat-icon class="char-next-btn"  (click)="getNextResults()">arrow_right</mat-icon>
+<mat-icon class="searchbar-page" (click)="getPreviousResults()">arrow_left</mat-icon>
+<mat-icon class="searchbar-page"  (click)="getNextResults()">arrow_right</mat-icon>
