--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -3,7 +3,9 @@
     <div>
       <mat-list>
         <mat-list-item>
-          <mat-icon matListItemIcon>circle</mat-icon>
+          <mat-icon [ngClass]="{
+            
+          }" matListItemIcon>circle</mat-icon>
           <h1 matListItemTitle> <span class="card-status">{{characterInfo.status}}</span> | {{ characterInfo.name }} </h1>
         </mat-list-item>
       </mat-list>
