--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -7,7 +7,7 @@
             [ngClass]="{
               'card-icon_alive': characterInfo.status === 'Alive',
               'card-icon_dead': characterInfo.status === 'Dead',
-              'card-icon_unknown': characterInfo.status === 'Unknown'
+              'card-icon_unknown': characterInfo.status === 'unknown'
             }"
             matListItemIcon
             >circle</mat-icon
