--- a/src/app/components/searchbar/searchbar.component.css
+++ b/src/app/components/searchbar/searchbar.component.css
@@ -16,7 +16,7 @@ form {
   justify-content: center;
  
 }
-.searbar-page{
+.searchbar-page{
   font-size:50px;
   width: fit-content;
   height: fit-content;
