--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -19,3 +19,4 @@
   *ngFor="let character of searchedName; index as i"
   [characterInfo]="character"
 ></app-char-card>
+<app-randmsvg></app-randmsvg>
