--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,5 +1,5 @@
 <section class="searchbar-wrapper">
-  <form ngSubmit="" #searchbar>
+  <form #searchbar>
     <input
       type="search"
       placeholder="Enter Character Here...."
