--- a/src/app/components/char-card/char-card.component.css
+++ b/src/app/components/char-card/char-card.component.css
@@ -1,6 +1,6 @@
 h1 {
   color: #fff;
-  font-size: xx-large;
+  font-size: medium;
 }
 
 h3 {
@@ -10,6 +10,7 @@ h3 {
 }
 p {
   font-family: 'Annie Use Your Telescope';
+  text-align: center;
   font-size: 1.5em;
   margin: 10px;
 }
@@ -31,8 +32,7 @@ article {
   font-family: 'Annie Use Your Telescope';
 }
 .card-wrapper {
-  padding: 10px;
-  width: 70vw;
+  padding: 2em;
   font-family: Luckiest Guy;
   text-shadow: 1px 2px 10px black;
   background-color: rgb(60, 62, 68);
@@ -40,16 +40,13 @@ article {
   color: #fff;
 }
 .card-table {
-  
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+  margin: 1em;
+   
     
 }
 .card-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
