--- a/src/app/components/char-card/char-card.component.html
+++ b/src/app/components/char-card/char-card.component.html
@@ -1,7 +1,7 @@
-<article>
-  <section class="card-wrapper">
+<article class="card-container">
+  <section class="card-wrapper card container">
     <div>
-      <mat-list>
+      <mat-list class="">
         <mat-list-item>
           <mat-icon
             [ngClass]="{
@@ -22,7 +22,7 @@
         <img [src]="characterInfo.image" alt="" />
       </div>
     </div>
-    <div class="card-table card-container">
+    <div class="card-table">
       <h3>Last Known Location:</h3>
       <p>{{ characterInfo.location.name }}</p>
 
