--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -6,7 +6,7 @@ padding: 10px
 }
 h1 {
   font-family: 'Luckiest Guy';
-  font-size: 76px;
+  font-size: 1.5em;
   color: chartreuse;
   text-align: center;
   text-shadow: 1px 2px 10px black;
