--- a/src/app/components/searchbar/searchbar.component.css
+++ b/src/app/components/searchbar/searchbar.component.css
@@ -26,6 +26,7 @@ form {
 input {
 
   flex-grow: 1;
+  padding: .5em;
   border: none;
   outline-style: none;
   font-family: 'Annie Use Your Telescope';
@@ -34,14 +35,13 @@ input {
 }
 
 button {
-  width: 156px;
-  height: 50px;
+  width: 6em;
   border-radius: 0px 20px 20px 0px;
   color: #fff;
   background: linear-gradient(to bottom     left,forestgreen, chartreuse);
   border: none;
   font-family: 'Luckiest Guy';
-  font-size: large;
+  font-size: small;
   text-shadow: 1px 2px 10px black;
 
 
